# econf

./: Cargo.toml  LICENSE  README.md  readme.sh
.github/: release-drafter-config.yml
.github/workflows/: readme.yml  release-drafter.yml  test.yml
econf/: Cargo.toml
econf-derive/: Cargo.toml
econf-derive/src/: lib.rs
econf/examples/: alltypes.rs  readme.rs  sample.rs  strum.rs
econf/src/: lib.rs  loader.rs
econf/tests/: basics.rs
tests/: basics.rs
