[package]
name = "econf-derive"
version = "0.1.4"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Load environment variables into your struct members directly."
homepage = "https://github.com/YushiOMOTE/econf"
documentation = "https://docs.rs/econf"
repository = "https://github.com/YushiOMOTE/econf"
readme = "README.md"

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[lib]
proc-macro = true
