[package]
name = "econf-derive"
version = "0.3.1"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Load environment variables into your struct members in one shot."
homepage = "https://github.com/YushiOMOTE/econf"
documentation = "https://docs.rs/econf"
repository = "https://github.com/YushiOMOTE/econf"
readme = "README.md"

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
