[package]
name = "econf"
version = "0.2.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Load environment variables into your struct members in one shot."
homepage = "https://github.com/YushiOMOTE/econf"
documentation = "https://docs.rs/econf"
repository = "https://github.com/YushiOMOTE/econf"
readme = "README.md"

[dependencies]
log = "0.4"
serde = "1.0"
serde_yaml = "0.8"
econf-derive = { version = "0.2.0", path = "../econf-derive" }
parse_duration = "1.0"

[dev-dependencies]
simple_logger = "0.5"
