[package]
name = "econf"
version = "0.3.1"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Load environment variables into your struct members in one shot."
homepage = "https://github.com/YushiOMOTE/econf"
documentation = "https://docs.rs/econf"
repository = "https://github.com/YushiOMOTE/econf"
readme = "README.md"

[dependencies]
log = "0.4"
serde = "1.0"
serde_yaml = "0.9"
econf-derive = { version = "0.3.1", path = "../econf-derive" }
humantime = "2.1"
url = { version = "2.5", optional = true }

[dev-dependencies]
simple_logger = "5.0"
strum = { version = "0.26", features = ["derive"] }

[features]
url = ["dep:url"]
